[gd_scene load_steps=2 format=3 uid="uid://dnq5j20fbcrwx"]

[ext_resource type="Script" path="res://core/systems/power/power_saver.gd" id="1_qeyke"]

[node name="PowerSaver" type="Node"]
script = ExtResource("1_qeyke")
dim_after_inactivity_mins = 1
dim_percent = 5

[node name="DimTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="SuspendTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true
